PR 1160: Updated the value column to not wrap, but ellipsis, Fixes #2623
 - Updated the value column to not wrap, but ellipsis, Fixes #2623

Related work items: #2623

--- a/src/css/Base.scss
+++ b/src/css/Base.scss
@@ -77,6 +77,18 @@
         @extend %smallFontSize;
     }
 
+    .lu .tableData.valueonly {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+    
+    .lu .values {
+        .bar,.stacked {
+            opacity: .5;
+        }
+    }
+
     .lu-popup {
         @extend .regularFont !optional;
         @extend %regularFont;
